# flush-auth

./: .env  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
migrations/2022-09-03-185056_init/: down.sql  up.sql
src/: App.tsx  index.css  index.tsx  style.css
src-tauri/: .dat.bk  Cargo.toml  quick-auth.db  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: build.rs  commands.rs  db.rs  main.rs  manager.rs  schema.rs  service.rs
src-tauri/src/db/: account.rs  account_repository.rs  manager.rs
src-tauri/src/service/: account.rs  crypto.rs  store.rs  totp.rs
src/api/: TauriCommand.ts
src/components/: Account.tsx  AccountDrawer.tsx  AccountEditModal.tsx  Accounts.tsx  ConfirmDialog.tsx  ScrollArea.tsx  SettingModal.tsx
src/constants/: AccountConst.ts  AppConst.ts
src/hooks/: useAccountDrawer.ts  useAccountEditModal.ts  useAccountRowState.ts  useAccounts.ts  useCalcRemainingTime.ts  useClipboard.ts  useStorageTheme.ts  useSystemTheme.ts  useTotpTimer.ts
src/pages/: _app.tsx  index.tsx
src/store/: Atoms.ts
src/types/: AccountTypes.ts  TotpTypes.ts
