[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
directories = "4.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all", "system-tray"] }
# totp-rs = { version = "^2.0", features = ["serde_support","otpauth"] }
libreauth = "*"
# crossbeam-utils = "0.8.11"
uuid = { version = "1.1", features = ["v4","fast-rng","macro-diagnostics"] }
aes = "0.8"
base64 = "0.13"
cbc = "0.1"
hex-literal = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.1"
tracing-appender = "0.2"
tracing-unwrap = "0.9"
chrono = "0.4"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
